Feature/ikm 1236 Komet fix for installer